--- a/consulta-medica-js/agendamento.html
+++ b/consulta-medica-js/agendamento.html
@@ -1,59 +1,181 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial - Consultório</title>
-    <link rel="stylesheet" href="design/style.css">
+    <title>Agendar Consulta - Consultório Tech</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="design/agendamento1.css">
 </head>
-<body>
 
-    <!-- Barra de navegação -->
+<body>
+    <!-- Navbar (Estilo Figma: Azul gradiente, logo à esquerda, links à direita) -->
     <header class="navbar">
         <div class="logo">
-            <h2>Consultório</h2>
+            <i class="fas fa-hospital"></i> Consultório Tech
         </div>
         <nav class="nav-actions">
-            <a href="login.html" class="btn-login">Login</a>
-
-            <div class="menu-container">
-                <button class="menu-btn">⋮</button>
-                <div class="dropdown">
-                    <a href="#sobre">Sobre</a>
-                    <a href="#servicos">Serviços</a>
-                    <a href="#contato">Contato</a>
-                </div>
-            </div>
+            <a href="paginainicial.html" class="btn btn-secondary"><i class="fas fa-home"></i> Início</a>
+            <a href="login.html" class="btn btn-secondary"><i class="fas fa-sign-in-alt"></i> Login</a>
         </nav>
     </header>
 
-    <!-- Conteúdo principal -->
-    <main class="hero">
-        <h1>Bem-vindo ao Consultório</h1>
-        <p>Agende suas consultas de forma prática e rápida.</p>
-    </main>
+    <!-- Seção Principal (Fundo gradiente, container central) -->
+    <section class="section agendamento">
+        <div class="container">
+            <div class="form-wrapper">
+                <h2><i class="fas fa-calendar-plus"></i> Agende sua Consulta</h2>
+                <p>Selecione as opções passo a passo de forma simples e visual.</p>
 
-    <!-- Rodapé -->
-    <footer>
-        <p>&copy; 2025 Consultório - Todos os direitos reservados</p>
+                <!-- Stepper (Estilo Figma: Círculos conectados por linha, ícones visíveis) -->
+                <div class="stepper">
+                    <div class="step active" data-step="1">
+                        <div class="step-icon"><i class="fas fa-stethoscope"></i></div>
+                        <span>Especialidade</span>
+                    </div>
+                    <div class="step" data-step="2">
+                        <div class="step-icon"><i class="fas fa-user-md"></i></div>
+                        <span>Médico</span>
+                    </div>
+                    <div class="step" data-step="3">
+                        <div class="step-icon"><i class="fas fa-calendar"></i></div>
+                        <span>Data e Horário</span>
+                    </div>
+                    <div class="step" data-step="4">
+                        <div class="step-icon"><i class="fas fa-user"></i></div>
+                        <span>Dados Pessoais</span>
+                    </div>
+                </div>
+
+                <form id="formAgendamento" class="form-agendamento">
+                    <!-- Etapa 1: Especialidades (Cards Visíveis em Grid - Sempre carregados) -->
+                    <div class="step-content active" data-step="1">
+                        <h3>Escolha a Especialidade</h3>
+                        <p class="step-subtitle">Clique em uma opção para selecionar.</p>
+                        <div class="cards-container" id="cardsEspecialidades">
+                            <div class="especialidade-card card" data-value="clinico">
+                                <i class="fas fa-stethoscope"></i>
+                                <span>Clínico Geral</span>
+                            </div>
+                            <div class="especialidade-card card" data-value="pediatria">
+                                <i class="fas fa-baby"></i>
+                                <span>Pediatria</span>
+                            </div>
+                            <div class="especialidade-card card" data-value="dermatologia">
+                                <i class="fas fa-hand-sparkles"></i>
+                                <span>Dermatologia</span>
+                            </div>
+                            <div class="especialidade-card card" data-value="cardiologia">
+                                <i class="fas fa-heartbeat"></i>
+                                <span>Cardiologia</span>
+                            </div>
+                            <div class="especialidade-card card" data-value="odontologia">
+                                <i class="fas fa-tooth"></i>
+                                <span>Odontologia</span>
+                            </div>
+                            <div class="especialidade-card card" data-value="neurologia">
+                                <i class="fas fa-brain"></i>
+                                <span>Neurologia</span>
+                            </div>
+                        </div>
+
+                        <div class="step-buttons">
+                            <button id="btnNext1" type="button" class="btn btn-next" onclick="nextStep(1)" disabled>
+                                Próximo <i class="fas fa-arrow-right"></i>
+                            </button>
+                        </div>
+                    </div>
+
+                    <!-- Etapa 2: Médicos (Cards Visíveis - Carregados via JS baseado em especialidade) -->
+                    <div class="step-content" data-step="2">
+                        <h3>Escolha o Médico</h3>
+                        <p class="step-subtitle">Profissionais disponíveis para sua especialidade.</p>
+                        <div class="cards-list" id="cardsMedicos">
+                            <!-- Populando via JS -->
+                        </div>
+                        <div class="step-buttons">
+                            <button type="button" class="btn btn-prev" onclick="prevStep(2)"><i
+                                    class="fas fa-arrow-left"></i> Anterior</button>
+                            <button type="button" class="btn btn-next" id="btnNext2" disabled
+                                onclick="nextStep(2)">Próximo <i class="fas fa-arrow-right"></i></button>
+                        </div>
+                    </div>
+
+                    <!-- Etapa 3: Data e Horário (Input Date + Chips Visíveis para Horários) -->
+                    <div class="step-content" data-step="3">
+                        <h3>Data e Horário</h3>
+                        <p class="step-subtitle">Selecione uma data e clique em um horário disponível.</p>
+                        <div class="input-group">
+                            <label for="data">Data da Consulta</label>
+                            <input type="date" id="data" required onchange="carregarHorarios()">
+                        </div>
+                        <div class="horarios-grid" id="cardsHorarios">
+                            <!-- Chips gerados via JS após data -->
+                            <p id="msgHorarios">Selecione uma data para ver os horários.</p>
+                        </div>
+                        <div class="step-buttons">
+                            <button type="button" class="btn btn-prev" onclick="prevStep(3)"><i
+                                    class="fas fa-arrow-left"></i> Anterior</button>
+                            <button type="button" class="btn btn-next" id="btnNext3" disabled
+                                onclick="nextStep(3)">Próximo <i class="fas fa-arrow-right"></i></button>
+                        </div>
+                    </div>
+
+                    <!-- Etapa 4: Dados Pessoais (Inputs com Labels Flutuantes - Estilo Figma) -->
+                    <div class="step-content" data-step="4">
+                        <h3>Seus Dados Pessoais</h3>
+                        <p class="step-subtitle">Preencha para finalizar o agendamento.</p>
+
+                        <div class="input-group">
+                            <label for="nome">Nome Completo</label>
+                            <input type="text" id="nome" placeholder="Ex: João Silva" required>
+                        </div>
+
+                        <div class="input-group">
+                            <label for="email">E-mail</label>
+                            <input type="email" id="email" placeholder="Ex: joao@email.com" required>
+                        </div>
+
+                        <div class="input-group">
+                            <label for="telefone">Telefone</label>
+                            <input type="tel" id="telefone" placeholder="(11) 99999-9999" required maxlength="15" oninput="aplicarMascaraTelefone(this)">
+                        </div>
+
+                        <div class="input-group">
+                            <label for="cpf">CPF</label>
+                            <input type="text" id="cpf" placeholder="123.456.789-00" maxlength="14" required oninput="aplicarMascaraCPF(this)">
+                        </div>
+
+                        <div class="input-group">
+                            <label for="endereco">Endereço</label>
+                            <textarea id="endereco" placeholder="Rua, número, bairro, cidade - Estado" rows="3"
+                                required></textarea>
+                        </div>
+
+                        <div class="input-group">
+                            <label for="observacoes">Observações</label>
+                            <textarea id="observacoes" placeholder="Sintomas ou preferências (opcional)"
+                                rows="3"></textarea>
+                        </div>
+
+                        <div class="step-buttons">
+                            <button type="button" class="btn btn-prev" onclick="prevStep(4)"><i
+                                    class="fas fa-arrow-left"></i> Anterior</button>
+                            <button type="submit" class="btn btn-principal" onclick="finalizarAgendamento(event)">Confirmar <i
+                                    class="fas fa-check"></i></button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer (Simples, como Figma) -->
+    <footer class="footer">
+        <p>&copy; 2024 Consultório Tech | <i class="fas fa-phone"></i> (11) 1234-5678 | Todos os direitos reservados</p>
     </footer>
 
-    <!-- Script para abrir/fechar o menu -->
-    <script>
-        const menuBtn = document.querySelector('.menu-btn');
-        const dropdown = document.querySelector('.dropdown');
-
-        menuBtn.addEventListener('click', () => {
-            dropdown.classList.toggle('show');
-        });
-
-        // Fecha o menu ao clicar fora
-        window.addEventListener('click', (e) => {
-            if (!menuBtn.contains(e.target) && !dropdown.contains(e.target)) {
-                dropdown.classList.remove('show');
-            }
-        });
-    </script>
-
+<script src="scripts/agendamento2"> </script>
 </body>
 </html>
