--- a/consulta-medica-js/paginainicial.html
+++ b/consulta-medica-js/paginainicial.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Consultório médico tecnológico: agende consultas online com especialistas e equipamentos de ponta. Cuide da sua saúde de forma inovadora.">
+    <meta name="description"
+        content="Consultório médico tecnológico: agende consultas online com especialistas e equipamentos de ponta. Cuide da sua saúde de forma inovadora.">
     <title>Consultório Médico Tech - Saúde Inovadora</title>
     <link rel="stylesheet" href="design/paginainicial.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- Ícones do Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
     <!-- Barra de navegação -->
     <header class="navbar">
@@ -19,23 +22,23 @@
                 <h2>Consultório Tech</h2>
             </div>
             <nav class="nav-menu">
-    <div class="menu-container">
-        <ul class="nav-links">
-            <li><a href="#sobre"><i class="fas fa-info-circle"></i> Sobre</a></li>
-            <li><a href="#servicos"><i class="fas fa-stethoscope"></i> Serviços</a></li>
-            <li><a href="#tecnologia"><i class="fas fa-microchip"></i> Tecnologia</a></li>
-            <li><a href="#especialidades"><i class="fas fa-user-md"></i> Especialidades</a></li>
-            <li><a href="#agendamento"><i class="fas fa-calendar-check"></i> Agendar</a></li>
-            <li><a href="#contato"><i class="fas fa-phone"></i> Contato</a></li>
-        </ul>
-        <button class="hamburger-btn" aria-label="Abrir menu de navegação" aria-expanded="false">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
-    </div>
-    <a href="login.html" class="btn-login"><i class="fas fa-user"></i> Login</a>
-</nav>
+                <div class="menu-container">
+                    <ul class="nav-links">
+                        <li><a href="#sobre"><i class="fas fa-info-circle"></i> Sobre</a></li>
+                        <li><a href="#servicos"><i class="fas fa-stethoscope"></i> Serviços</a></li>
+                        <li><a href="#tecnologia"><i class="fas fa-microchip"></i> Tecnologia</a></li>
+                        <li><a href="#especialidades"><i class="fas fa-user-md"></i> Especialidades</a></li>
+                        <li><a href="#agendamento"><i class="fas fa-calendar-check"></i> Agendar</a></li>
+                        <li><a href="#contato"><i class="fas fa-phone"></i> Contato</a></li>
+                    </ul>
+                    <button class="hamburger-btn" aria-label="Abrir menu de navegação" aria-expanded="false">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
+                </div>
+                <a href="login.html" class="btn-login"><i class="fas fa-user"></i> Login</a>
+            </nav>
         </div>
     </header>
 
@@ -47,16 +50,20 @@
                 <div class="container">
                     <div class="hero-content">
                         <h1>Cuide da Sua Saúde com Tecnologia de Ponta</h1>
-                        <p>Consultório médico inovador: consultas online, equipamentos high-tech e especialistas dedicados. Agende agora e sinta a diferença!</p>
+                        <p>Consultório médico inovador: consultas online, equipamentos high-tech e especialistas
+                            dedicados. Agende agora e sinta a diferença!</p>
                         <div class="hero-buttons">
-                            <a href="#agendamento" class="btn-primary"><i class="fas fa-calendar-plus"></i> Agendar Agora</a>
-                            <a href="#servicos" class="btn-secondary"><i class="fas fa-arrow-right"></i> Descubra Mais</a>
+                            <a href="#agendamento" class="btn-primary"><i class="fas fa-calendar-plus"></i> Agendar
+                                Agora</a>
+                            <a href="#servicos" class="btn-secondary"><i class="fas fa-arrow-right"></i> Descubra
+                                Mais</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="hero-image-bg">
-                <img src="https://tse1.mm.bing.net/th/id/OIP.G2IaGRhqbL7D9Wks_QrNkgHaEJ?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Consultório médico tecnológico com equipamentos modernos e telas digitais">
+                <img src="https://tse1.mm.bing.net/th/id/OIP.G2IaGRhqbL7D9Wks_QrNkgHaEJ?rs=1&pid=ImgDetMain&o=7&rm=3"
+                    alt="Consultório médico tecnológico com equipamentos modernos e telas digitais">
             </div>
         </section>
 
@@ -64,7 +71,8 @@
         <section id="servicos" class="services">
             <div class="container">
                 <h2 class="section-title">Nossos Serviços Inovadores</h2>
-                <p class="section-subtitle">Atendimento personalizado com foco em prevenção e tecnologia para resultados rápidos.</p>
+                <p class="section-subtitle">Atendimento personalizado com foco em prevenção e tecnologia para resultados
+                    rápidos.</p>
                 <div class="services-grid">
                     <div class="service-card">
                         <i class="fas fa-heart"></i>
@@ -95,11 +103,13 @@
             <div class="container">
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Equipamentos médicos tecnológicos em consultório moderno">
+                        <img src="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                            alt="Equipamentos médicos tecnológicos em consultório moderno">
                     </div>
                     <div class="about-text">
                         <h2>Tecnologia no Coração do Seu Cuidado</h2>
-                        <p>Utilizamos as últimas inovações: telemedicina, IA para diagnósticos, prontuários eletrônicos e equipamentos de última geração para um atendimento eficiente e seguro.</p>
+                        <p>Utilizamos as últimas inovações: telemedicina, IA para diagnósticos, prontuários eletrônicos
+                            e equipamentos de última geração para um atendimento eficiente e seguro.</p>
                         <ul class="about-features">
                             <li><i class="fas fa-microchip"></i> Telemedicina 24/7</li>
                             <li><i class="fas fa-robot"></i> Diagnósticos com IA</li>
@@ -120,7 +130,8 @@
                 <div class="about-content">
                     <div class="about-text">
                         <h2>Sobre Nosso Consultório Tech</h2>
-                        <p>Fundado há 10 anos, somos pioneiros em saúde digital. Nossa equipe de especialistas usa tecnologia para oferecer cuidados humanizados e precisos, sempre priorizando o paciente.</p>
+                        <p>Fundado há 10 anos, somos pioneiros em saúde digital. Nossa equipe de especialistas usa
+                            tecnologia para oferecer cuidados humanizados e precisos, sempre priorizando o paciente.</p>
                         <ul class="about-features">
                             <li><i class="fas fa-users"></i> Mais de 50 profissionais qualificados</li>
                             <li><i class="fas fa-clock"></i> Atendimento 24h via app</li>
@@ -128,7 +139,8 @@
                         </ul>
                     </div>
                     <div class="about-image">
-                        <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Equipe médica usando tecnologia em consultório">
+                        <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                            alt="Equipe médica usando tecnologia em consultório">
                     </div>
                 </div>
             </div>
@@ -138,7 +150,8 @@
         <section id="especialidades" class="services alt-bg">
             <div class="container">
                 <h2 class="section-title">Especialidades com Inovação</h2>
-                <p class="section-subtitle">De clínica geral a especialidades avançadas, tudo integrado à tecnologia.</p>
+                <p class="section-subtitle">De clínica geral a especialidades avançadas, tudo integrado à tecnologia.
+                </p>
                 <div class="services-grid">
                     <div class="service-card">
                         <i class="fas fa-stethoscope"></i>
@@ -168,7 +181,8 @@
         <section id="agendamento" class="contact">
             <div class="container">
                 <h2 class="section-title">Agende Sua Consulta</h2>
-                <p class="section-subtitle">Fácil e rápido: selecione data, especialidade e confirme online. Disponibilidade em tempo real!</p>
+                <p class="section-subtitle">Fácil e rápido: selecione data, especialidade e confirme online.
+                    Disponibilidade em tempo real!</p>
                 <div class="contact-content">
                     <div class="contact-info">
                         <div class="info-item">
@@ -231,7 +245,8 @@
                 <div class="about-content">
                     <div class="about-text">
                         <h2>Emergências? Estamos Prontos 24/7</h2>
-                        <p>Atendimento imediato via app de emergência ou ligação. Nossa IA prioriza casos urgentes para resposta rápida.</p>
+                        <p>Atendimento imediato via app de emergência ou ligação. Nossa IA prioriza casos urgentes para
+                            resposta rápida.</p>
                         <ul class="about-features">
                             <li><i class="fas fa-exclamation-triangle"></i> Botão de pânico no app</li>
                             <li><i class="fas fa-ambulance"></i> Parceria com serviços de resgate</li>
@@ -239,7 +254,8 @@
                         </ul>
                     </div>
                     <div class="about-image">
-                        <img src="https://images.unsplash.com/photo-1585399822294-6c7f73f16e6b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Equipe de emergência médica com tecnologia avançada">
+                        <img src="https://images.unsplash.com/photo-1585399822294-6c7f73f16e6b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                            alt="Equipe de emergência médica com tecnologia avançada">
                     </div>
                 </div>
             </div>
@@ -284,4 +300,5 @@
         </div>
     </footer>
 </body>
+
 </html>
