--- a/consulta-medica-js/agendamento.html
+++ b/consulta-medica-js/agendamento.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <!-- Navbar (Estilo Figma: Azul gradiente, logo à esquerda, links à direita) -->
     <header class="navbar">
         <div class="logo">
             <i class="fas fa-hospital"></i> Consultório Tech
@@ -21,14 +20,12 @@
         </nav>
     </header>
 
-    <!-- Seção Principal (Fundo gradiente, container central) -->
     <section class="section agendamento">
         <div class="container">
             <div class="form-wrapper">
                 <h2><i class="fas fa-calendar-plus"></i> Agende sua Consulta</h2>
                 <p>Selecione as opções passo a passo de forma simples e visual.</p>
 
-                <!-- Stepper (Estilo Figma: Círculos conectados por linha, ícones visíveis) -->
                 <div class="stepper">
                     <div class="step active" data-step="1">
                         <div class="step-icon"><i class="fas fa-stethoscope"></i></div>
@@ -49,7 +46,6 @@
                 </div>
 
                 <form id="formAgendamento" class="form-agendamento">
-                    <!-- Etapa 1: Especialidades (Cards Visíveis em Grid - Sempre carregados) -->
                     <div class="step-content active" data-step="1">
                         <h3>Escolha a Especialidade</h3>
                         <p class="step-subtitle">Clique em uma opção para selecionar.</p>
@@ -87,12 +83,10 @@
                         </div>
                     </div>
 
-                    <!-- Etapa 2: Médicos (Cards Visíveis - Carregados via JS baseado em especialidade) -->
                     <div class="step-content" data-step="2">
                         <h3>Escolha o Médico</h3>
                         <p class="step-subtitle">Profissionais disponíveis para sua especialidade.</p>
                         <div class="cards-list" id="cardsMedicos">
-                            <!-- Populando via JS -->
                         </div>
                         <div class="step-buttons">
                             <button type="button" class="btn btn-prev" onclick="prevStep(2)"><i
@@ -102,7 +96,6 @@
                         </div>
                     </div>
 
-                    <!-- Etapa 3: Data e Horário (Input Date + Chips Visíveis para Horários) -->
                     <div class="step-content" data-step="3">
                         <h3>Data e Horário</h3>
                         <p class="step-subtitle">Selecione uma data e clique em um horário disponível.</p>
@@ -111,7 +104,6 @@
                             <input type="date" id="data" required onchange="carregarHorarios()">
                         </div>
                         <div class="horarios-grid" id="cardsHorarios">
-                            <!-- Chips gerados via JS após data -->
                             <p id="msgHorarios">Selecione uma data para ver os horários.</p>
                         </div>
                         <div class="step-buttons">
@@ -122,7 +114,6 @@
                         </div>
                     </div>
 
-                    <!-- Etapa 4: Dados Pessoais (Inputs com Labels Flutuantes - Estilo Figma) -->
                     <div class="step-content" data-step="4">
                         <h3>Seus Dados Pessoais</h3>
                         <p class="step-subtitle">Preencha para finalizar o agendamento.</p>
@@ -139,12 +130,14 @@
 
                         <div class="input-group">
                             <label for="telefone">Telefone</label>
-                            <input type="tel" id="telefone" placeholder="(11) 99999-9999" required maxlength="15" oninput="aplicarMascaraTelefone(this)">
+                            <input type="tel" id="telefone" placeholder="(11) 99999-9999" required maxlength="15"
+                                oninput="aplicarMascaraTelefone(this)">
                         </div>
 
                         <div class="input-group">
                             <label for="cpf">CPF</label>
-                            <input type="text" id="cpf" placeholder="123.456.789-00" maxlength="14" required oninput="aplicarMascaraCPF(this)">
+                            <input type="text" id="cpf" placeholder="123.456.789-00" maxlength="14" required
+                                oninput="aplicarMascaraCPF(this)">
                         </div>
 
                         <div class="input-group">
@@ -162,20 +155,21 @@
                         <div class="step-buttons">
                             <button type="button" class="btn btn-prev" onclick="prevStep(4)"><i
                                     class="fas fa-arrow-left"></i> Anterior</button>
-                            <button type="submit" class="btn btn-principal" onclick="finalizarAgendamento(event)">Confirmar <i
-                                    class="fas fa-check"></i></button>
+                            <button id="btnFinalizar" type="button" class="btn btn-principal"
+                                onclick="enviarAgendamento()">
+                                Confirmar Agendamento <i class="fas fa-check"></i>
+                            </button>
                         </div>
-                    </div>
                 </form>
             </div>
         </div>
     </section>
 
-    <!-- Footer (Simples, como Figma) -->
     <footer class="footer">
         <p>&copy; 2024 Consultório Tech | <i class="fas fa-phone"></i> (11) 1234-5678 | Todos os direitos reservados</p>
     </footer>
 
-<script src="scripts/agendamento2"> </script>
+    <script src="scripts/agendamento2.js"></script>
 </body>
+
 </html>
